# ChangeLog for sys-process/incron
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/incron/ChangeLog,v 1.23 2012/11/20 01:11:48 flameeyes Exp $

  20 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/incron-0.5.10+gcc-4.7.patch, incron-0.5.10.ebuild:
  QA: add patch to build with gcc 4.7 (bug #423935).

  30 Oct 2012; Christian Ruppert <idl0r@gentoo.org> -incron-0.5.8.ebuild,
  -incron-0.5.9-r1.ebuild, -files/incron-0.5.8-gcc44.patch,
  -files/incron-0.5.8-gentoo.patch, -files/incron-0.5.9-Makefile.patch,
  -files/incron-0.5.9-gcc44.patch:
  Cleanup

  17 Apr 2012; Brent Baude <ranger@gentoo.org> incron-0.5.10.ebuild:
  Marking incron-0.5.10 ppc for bug 412181

  16 Apr 2012; Agostino Sarubbo <ago@gentoo.org> incron-0.5.10.ebuild:
  Stable for amd64, wrt bug #412181

  16 Apr 2012; Jeff Horelick <jdhore@gentoo.org> incron-0.5.10.ebuild:
  marked x86 per bug 412181

*incron-0.5.10 (07 Apr 2012)

  07 Apr 2012; Christian Ruppert <idl0r@gentoo.org> +incron-0.5.10.ebuild:
  Version bump.

  09 Jan 2012; Brent Baude <ranger@gentoo.org> incron-0.5.9-r1.ebuild:
  Marking incron-0.5.9-r1 ppc for bug 361099

  11 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  incron-0.5.9-r1.ebuild:
  x86 stable wrt bug #361099

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> incron-0.5.9-r1.ebuild:
  Stable on amd64 wrt bug #361099

*incron-0.5.9-r1 (31 Jan 2011)

  31 Jan 2011; Christian Ruppert <idl0r@gentoo.org> -incron-0.5.7.ebuild,
  -files/incron-0.5.7-gcc43.patch, -files/incron-0.5.7-gentoo.patch,
  -incron-0.5.9.ebuild, +incron-0.5.9-r1.ebuild,
  +files/incron-0.5.9-Makefile.patch, +files/incron-0.5.9-gcc44.patch,
  +files/incrond.init, metadata.xml:
  Take maintainership. Revision bump. Reorder patches. Add separate init
  script. Fix INOTIFY check. Remove old ebuilds/patches.

  04 Mar 2010; Benedikt Böhm <hollow@gentoo.org> metadata.xml:
  remove myself from metadata.xml
