@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/incron
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/incron/ChangeLog,v 1.23 2012/11/20 01:11:48 flameeyes Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-process/incron/ChangeLog,v 1.24 2013/10/10 17:10:51 pacho Exp $
+
+*incron-0.5.10-r1 (10 Oct 2013)
+
+  10 Oct 2013; Pacho Ramos <pacho@gentoo.org> +files/incrond.service,
+  +incron-0.5.10-r1.ebuild:
+  Add unit file (#487498 by Rafal Rzepecki)
 
   20 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org>
   +files/incron-0.5.10+gcc-4.7.patch, incron-0.5.10.ebuild:
